--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,8 @@
     <string name="app_name">Hello</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_fragment_tester">FragmentTester</string>
+    <string name="title_activity_fragment_tester2">FragmentTester2</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
